--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Fu Enpei"
-  avatar           : "profile.png"
-  bio              : "I am an undergraduate majoring in hydrology and water resources engineering. In my research project, I need to learn to use Python to process data."
+  avatar           : "L1031820.JPG"
+  bio              : "I am an undergraduate majoring in hydrology and water resources engineering, a water conservancy major student enrolled in Northwest A&F University in 2021 . In my research project, I need to learn to use Python to process data."
   location         : "Shannxi"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
